--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/IMG_2764.jpg" alt="Tyr's profile picture" width="200" height="250"></td>
+      <td><img src="images/IMG_2764.JPG" alt="Tyr's profile picture" width="200" height="250"></td>
       <td>
         <h1>Tyr Huang </h1>
         <h2>黃吉廷</h2>
